# pyphpbb-sl

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .sourcery.yaml  CONTRIBUTING.rst  HISTORY.md  Makefile  README.md  contributing.html  genindex.html  history.html  index.html  installation.html  modules.html  objects.inv  pyproject.toml  requirements-dev.txt  requirements-test.txt  search.html  searchindex.js  setup.cfg  setup.py  tasks.py  usage.html
.github/workflows/: code-cov.yml  python-package.yml  sphinx_docs_to_gh_pages.yml
_sources/: index.rst.txt  installation.md.txt  usage.md.txt
_static/: alabaster.css
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  requirements-doc.txt  usage.md  usage.rst
docs/source/: conf.py
examples/: .env.sample  01-send.py  02-read.py  03-read-expected.py  04a-validate-token.py  04b-send-token.py  05-fetch-allready-read.py  06-delete-mp.py  07-clean-sent-box.py  08-clean-both-accounts-inbox-and-sent.py  09-birthday.py  10-fetch-rank.py  11-fetch-uid.py  12-fetch-infos.py  13-explore.py
pyphpbb_sl/: __init__.py  browser.py  phpbb.py
pyphpbb_sl/models/: __init__.py  forum.py  message.py
pyphpbb_sl/parsers/: __init__.py  forum.py
tests/: test_in_real.py  test_pyphpbb_sl.py
