[bumpversion]
current_version = 0.12.0
commit = True
tag = True

[bumpversion:file:pyphpbb_sl/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,dist,build,.venv
max-line-length = 88
ignore = 
	D203,
	D213,
	E123,
	W503

[pylint.MESSAGES CONTROL]
disable = C0301,C0103

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
convention = google
add-ignore = D105,D203,D213

[pep257]
ignore = D105,D203,D213,D301

[aliases]
test = pytest

[tool:pytest]
testpaths = 
	tests
filterwarnings = 
	ignore:.*U.*:DeprecationWarning
asyncio_mode = auto
asyncio_default_fixture_loop_scope = session

[coverage:run]
source = pyphpbb_sl
omit = 
	.venv/*
	examples/
	*/__init__.py
	tasks.py

[options.extras_require]
docs = 
	sphinx>=6,<7
	myst_parser
	Pygments
