[bdist_wheel]
universal = 1

[flake8]
exclude = docs,dist,build,.venv,.venv11,.venv12,.venv13,.venv14
max-line-length = 100
ignore = 
	D203,
	D213,
	E123,
	W503

[pylint.MESSAGES CONTROL]
disable = C0301,C0103

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
convention = google
add-ignore = D105,D203,D213

[pep257]
ignore = D105,D203,D213,D301

[coverage:run]
source = pyphpbb_sl
omit = 
	.venv/*
	examples/
	*/__init__.py
	tasks.py

[options.extras_require]
docs = 
	sphinx>=6,<7
	myst_parser
	Pygments
